--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello</title>
-</head>
-<body>
+	<title>Price.</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" 
+	integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+	 crossorigin="anonymous">
+	 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+</head>
+<body>	
+ <header>
+	 <nav>
+		<ul>
+			<li><a class ="logo" href="#"><img src="..." alt="Brand"></a></li>
+			<li><a href="#"><i class="fas fa-mobile-alt"></i> Mobile</a></li>
+			<li><a href="#"><i class="fas fa-laptop"></i> Laptop</a></li>
+			<li><a href="#"><i class="fas fa-desktop"></i> Desktop</a></li>
+			<li><a href="#">etc</a></li>
+		</ul>
+	</nav>
+ </header>
+
+ <main>
+	 <div>
+		 <form action="post" action="#">
+				<input type="text" name="text" id="search" class="search">
+				<input type="submit" name="submit" value="submit" id="submit" class="submit">
+		 </form>
+	 </div>
+ </main>
 </body>
 </html>
