--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
  </header>
 
  <main>
-	 <div>
+	 <div class="search-bar">
 		 <form action="post" action="#">
 				<input type="text" name="text" id="search" class="search">
-				<input type="submit" name="submit" value="submit" id="submit" class="submit">
+				<input type="Submit" name="Submit" value="Search" id="submit" class="submit">
+				
 		 </form>
 	 </div>
  </main>
