--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
 	 crossorigin="anonymous">
 	 <link rel="stylesheet" type="text/css" href="css/style.css" />
+	 <style type="text/css">
+	
+	 </style>
 
 </head>
 <body>	
@@ -16,10 +19,11 @@
 	 <nav>
 		<ul>
 			<li><a class ="logo" href="#"><img src="..." alt="Brand"></a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#"><i class="fas fa-mobile-alt"></i> Mobile</a></li>
 			<li><a href="#"><i class="fas fa-laptop"></i> Laptop</a></li>
 			<li><a href="#"><i class="fas fa-desktop"></i> Desktop</a></li>
-			<li><a href="#">etc</a></li>
+			<li><a href="#">Etc</a></li>
 		</ul>
 	</nav>
  </header>
