--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Price.</title>
+	<meta name="viewport" content="width=device-width , initial scale=1.0">
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
@@ -9,9 +11,6 @@
 	integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
 	 crossorigin="anonymous">
 	 <link rel="stylesheet" type="text/css" href="css/style.css" />
-	 <style type="text/css">
-	
-	 </style>
 
 </head>
 <body>	
@@ -31,7 +30,7 @@
  <main>
 	 <div class="search-bar">
 		 <form action="post" action="#">
-				<input type="text" name="text" id="search" class="search">
+				<input type="text" name="text" id="search" class="search" placeholder="Search">
 				<input type="Submit" name="Submit" value="Search" id="submit" class="submit">
 				
 		 </form>
