--- a/product.html
+++ b/product.html
@@ -11,17 +11,6 @@
 	integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
 	 crossorigin="anonymous">
 	 <link rel="stylesheet" type="text/css" href="css/style.css" />
-	 <style>
-		 /*  back ground image*/
-		body{
-			background-image: url("img/backimg.jpg");
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: center center;
-			height: 100vh;
-			width: 100%;		
-		}
-	 </style>
 
 </head>
 <body>	
@@ -39,13 +28,7 @@
  </header>
 
  <main>
-	 <div class="search-bar">
-		 <form action="post" action="#">
-				<input type="text" name="text" id="search" class="search" placeholder="Search">
-				<input type="Submit" name="Submit" value="Search" id="submit" class="submit">
-				
-		 </form>
-	 </div>
+	<h3>hiii</h3>
  </main>
 </body>
 </html>
