--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Price.</title>
 	<meta name="viewport" content="width=device-width , initial scale=1.0">
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
@@ -33,7 +34,7 @@
 			<li><a href="product.html"><i class="fas fa-mobile-alt"></i> Mobile</a></li>
 			<li><a href="#"><i class="fas fa-laptop"></i> Laptop</a></li>
 			<li><a href="#"><i class="fas fa-desktop"></i> Desktop</a></li>
-			<li><a href="#">Etc</a></li>
+			<li><a href="test.php">Etc</a></li>
 		</ul>
 	</nav>
  </header>
@@ -41,7 +42,7 @@
  <main>
 	 <div class="search-bar">
 		 <form action="post" action="#">
-				<input type="text" name="text" id="search" class="search" placeholder="Search">
+				<input type="search" name="search" id="search" class="search" placeholder="Search">
 				<input type="Submit" name="Submit" value="Search" id="submit" class="submit">
 				
 		 </form>
