--- a/product.html
+++ b/product.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Price.</title>
 	<meta name="viewport" content="width=device-width , initial scale=1.0">
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
@@ -11,6 +12,7 @@
 	integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
 	 crossorigin="anonymous">
 	 <link rel="stylesheet" type="text/css" href="css/style.css" />
+	 <link rel="stylesheet" type="text/css" href="css/product.css">
 
 </head>
 <body>	
@@ -28,7 +30,24 @@
  </header>
 
  <main>
-	<h3>hiii</h3>
+
+	 <div class="grid1">
+
+		<div class="grid1-1"></div>
+		<div class="grid1-2">sfej</div>
+		<div class="grid1-3">jfd</div>
+		<div class="grid1-4">gs</div>
+		<div class="grid1-5">sd</div>
+		<div class="grid1-6">sd</div>
+		<div class="grid1-7">hf</div>
+		<div class="grid1-8">ht</div>
+		<div class="grid1-9">dht</div>
+		<div class="grid1-10">dthf</div>
+
+
+
+	 </div>	
+	
  </main>
 </body>
 </html>
